# Solana-File-Sharing-System

./: Anchor.toml  CODE_OF_CONDUCT.md  README.md  package-lock.json  package.json
app/: package-lock.json  package.json
app/public/: index.html
app/src/: App.css  App.js  App.tsx  FileUpload.js  FileUpload.tsx  MyWallet.tsx  idl.json  page.css
ipfs/: package-lock.json  package.json
ipfs/src/: App.css  App.js
programs/solana_file_sharing_system/: Cargo.toml
programs/solana_file_sharing_system/src/: lib.rs
tests/: solana_file_sharing_system.js
